feat: add registration route
