# server/doc/api.yaml
@@ -133,6 +133,60 @@ paths:
                 description: JWT Token
         403:
           description: Incorrect login or password
+  /registration:
+    post:
+      tags:
+        - Registration
+      security: []
+      summary: registration
+      description: Registration a user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                name:
+                  type: string
+                  description: Name
+                login:
+                  type: string
+                  description: Username
+                password:
+                  type: string
+                  description: Password
+              required:
+                - name
+                - login
+                - password
+      responses:
+        200:
+          description: Successful registration.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                  user:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      name:
+                        type: string
+                      login:
+                        type: string
+                      subscription:
+                        type: string
+                description: JWT Token
+        400:
+          description: Incorrect data
+        409:
+          description: Duplicate
   /users:
     get:
       tags:
